fixes multiple scrollbars bbeing shown and without styling on google chrome (#1)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,4 @@
 .dashboard-wrapper {
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: 1fr 5fr;
 }
